# Computational_Physics

./: 2.cpp  Fibonacci  Fibonacci.cpp  README.md
.github/workflows/: .gitignore  Continuous_Integration.yml
Ising_Spin/: CMakeLists.txt  Ising_System.hpp  Ising_spin  Ising_spin.cpp  UnitTests_IsingSystem.cpp  UnitTests_spin.cpp  spin.hpp
Ising_Spin/Square_Lattice/: CMakeLists.txt  IsingSpin_Square  IsingSpin_Square.cpp  IsingSystem_Square.hpp  SpinOnLattice.hpp  Test_IsingSystem_Square.cpp
